--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,18 +24,19 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    // 头像
-    compile files('libs/GifView.jar')
-    compile files('libs/universal-image-loader-1.9.5.jar')
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.github.varunest:sparkbutton:1.0.0'
-    compile 'se.emilsjolander:stickylistheaders:2.7.0'
-    compile 'cn.pedant.sweetalert:library:1.3'
-    compile 'cn.finalteam:galleryfinal:1.4.8.7'
-    compile 'net.qiujuer.genius:blur:2.0.0-beta4'
+    compile files('libs/GifView.jar')                           //动态图
+    compile files('libs/universal-image-loader-1.9.5.jar')  //图片加载
+    compile 'de.hdodenhof:circleimageview:2.1.0'            //圆形头像
+    compile 'com.github.varunest:sparkbutton:1.0.0'         //喜欢按钮
+    compile 'se.emilsjolander:stickylistheaders:2.7.0'      //头部布局
+    compile 'cn.pedant.sweetalert:library:1.3'              //提示框
+    compile 'cn.finalteam:galleryfinal:1.4.8.7'             //相册
+    compile 'net.qiujuer.genius:blur:2.0.0-beta4'           //高斯模糊
+    compile 'com.github.deano2390:MaterialShowcaseView:1.1.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.qintong:insLoadingAnimation:1.0.1'
     testCompile 'junit:junit:4.12'
 }
+
